# music-tutor

./: .gitignore  README.md  pyproject.toml
client/: Makefile  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src/components/: PlayerPage.tsx  SongBrowser.tsx
client/src/hooks/: useAudioEngine.ts  useBeatSync.ts  useVisualization.ts
client/src/lib/: utils.ts
client/src/types/: analysis.ts
docs/: CORE_CONVERTER_SPEC.md  VISUALIZATION_SPEC.md
output/01 The Accomodator/stems/: bass_0.5x.flac.REMOVED.git-id  bass_0.75x.flac.REMOVED.git-id  bass_1.0x.flac.REMOVED.git-id  bass_1.25x.flac.REMOVED.git-id  drums_0.5x.flac.REMOVED.git-id  drums_0.75x.flac.REMOVED.git-id  drums_1.0x.flac.REMOVED.git-id  drums_1.25x.flac.REMOVED.git-id  guitar_0.5x.flac.REMOVED.git-id  guitar_0.75x.flac.REMOVED.git-id  guitar_1.0x.flac.REMOVED.git-id  guitar_1.25x.flac.REMOVED.git-id  other_0.5x.flac.REMOVED.git-id  other_0.75x.flac.REMOVED.git-id  other_1.0x.flac.REMOVED.git-id  other_1.25x.flac.REMOVED.git-id  piano_0.5x.flac.REMOVED.git-id  piano_0.75x.flac.REMOVED.git-id  piano_1.0x.flac.REMOVED.git-id  piano_1.25x.flac.REMOVED.git-id  vocals_0.5x.flac.REMOVED.git-id  vocals_0.75x.flac.REMOVED.git-id  vocals_1.0x.flac.REMOVED.git-id  vocals_1.25x.flac.REMOVED.git-id
output/california-english/: analysis.json.REMOVED.git-id  metadata.nfo
output/california-english/stems/: bass_0.5x.flac.REMOVED.git-id  bass_0.75x.flac.REMOVED.git-id  bass_1.0x.flac.REMOVED.git-id  bass_1.25x.flac.REMOVED.git-id  drums_0.5x.flac.REMOVED.git-id  drums_0.75x.flac.REMOVED.git-id  drums_1.0x.flac.REMOVED.git-id  drums_1.25x.flac.REMOVED.git-id  guitar_0.5x.flac.REMOVED.git-id  guitar_0.75x.flac.REMOVED.git-id  (+14 more)
src/music_tutor/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_beat_detection_stage.py  test_finalize_stage.py  test_ingest_stage.py  test_lyrics_alignment_stage.py  test_models.py  test_pitch_detection_stage.py  test_separation_stage.py  test_time_stretch_stage.py
(+22 files in other folders)
